--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 python_version >= '3.8'
 git+https://github.com/Rapptz/discord.py@master
 git+https://github.com/ssut/py-googletrans@master
+git+https://github.com/Rapptz/discord-ext-menus
 jishaku
 wavelink
 parsedatetime
