More updates for 2.0

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
-python_version >= '3.8'
-git+https://github.com/Rapptz/discord.py@master
-git+https://github.com/ssut/py-googletrans@master
+python_version >= '3.11'
+discord.py[voice,speed]
 git+https://github.com/Rapptz/discord-ext-menus
+asyncpg
 jishaku
 wavelink
 parsedatetime
 python-dateutil
 tabulate
-pytz
-asyncpg
 pillow
 aenum
 rapidfuzz
 humanize
+psutil
+yt-dlp
+git+https://github.com/PythonistaGuild/mystbin.py
